# minijinja

minijinja-cabi/: CMakeLists.txt  Cargo.toml
minijinja-cabi/cmake/: minijinjaConfig.cmake.in  minijinjaGetVersion.cmake  minijinjaRustTargets.cmake
minijinja-cabi/src/: env.rs
minijinja/src/vm/: context.rs
