[package]
name = "minijinja-cabi"
version = "2.11.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
minijinja = { version = "2.11.0", path = "../minijinja", features = ["loader", "custom_syntax", "json"] }
minijinja-contrib = { version = "2.11.0", path = "../minijinja-contrib", features = ["pycompat"], optional = true }

[features]
contrib = ["dep:minijinja-contrib"]
